Bug 93491 - [i915] [skl] GPU Hang when running Heaven 4.0
Summary: [i915] [skl] GPU Hang when running Heaven 4.0
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-24 00:48 UTC by Mike Lothian
Modified: 2017-07-24 22:43 UTC (History)
7 users (show)

See Also:
i915 platform: SKL
i915 features: GPU hang


Attachments
Crash dump (535.03 KB, text/plain)
2015-12-24 00:48 UTC, Mike Lothian
no flags Details
Dmesg for hang (70.43 KB, text/plain)
2015-12-24 00:49 UTC, Mike Lothian
no flags Details
Intel GPU error dump (1.14 MB, text/plain)
2016-03-29 09:20 UTC, Abdiel Janulgue
no flags Details
drm/i915/skl: Use WaForceContextSaveRestoreNonCoherent for all revs (1.84 KB, patch)
2016-04-01 15:16 UTC, Mika Kuoppala
no flags Details | Splinter Review
Error state from manhattan on gt4e (87.84 KB, application/gzip)
2016-04-08 21:35 UTC, Ben Widawsky
no flags Details

Description Mike Lothian 2015-12-24 00:48:36 UTC
Created attachment 120672 [details]
Crash dump

The gpu hung when trying to run Unigine Heaven 4.0 on my Skylake machine

This is drm-next with the latest mesa
Comment 1 Mike Lothian 2015-12-24 00:49:03 UTC
Created attachment 120673 [details]
Dmesg for hang
Comment 2 Mike Lothian 2015-12-24 01:54:46 UTC
I'm running it full screen at the native 4k resolution, quality Ultra, tessellation Extreme

The hang only happens if Antialiasing is enabled (either x2 x4 or x8)
Comment 3 Abdiel Janulgue 2016-03-29 09:20:14 UTC
Created attachment 122606 [details]
Intel GPU error dump

This gets triggered with or without i915.enable_rc6=0. Attached is the GPU ringdump
Comment 4 Mika Kuoppala 2016-04-01 12:19:21 UTC
Please test with,

https://bugs.freedesktop.org/attachment.cgi?id=122661
Comment 5 Mika Kuoppala 2016-04-01 15:16:53 UTC
Created attachment 122663 [details] [review]
drm/i915/skl: Use WaForceContextSaveRestoreNonCoherent for  all revs
Comment 6 Mika Kuoppala 2016-04-01 15:17:19 UTC
(In reply to Mika Kuoppala from comment #4)
> Please test with,
> 
> https://bugs.freedesktop.org/attachment.cgi?id=122661

Ignore this
Comment 7 Mika Kuoppala 2016-04-01 15:26:22 UTC
(In reply to Mika Kuoppala from comment #5)
> Created attachment 122663 [details] [review] [review]
> drm/i915/skl: Use WaForceContextSaveRestoreNonCoherent for  all revs

This one cured heaven4.0 symptomps with 00:02.0 0300: 8086:1926 (rev 0a)

You might need also a patch from
https://bugs.freedesktop.org/show_bug.cgi?id=94161
Comment 8 Ben Widawsky 2016-04-08 21:35:09 UTC
I am seeing hangs with these patches on Manhattan. They do not occur on every run.
Comment 9 Ben Widawsky 2016-04-08 21:35:56 UTC
Created attachment 122828 [details]
Error state from manhattan on gt4e
Comment 10 Mika Kuoppala 2016-04-12 13:06:05 UTC
(In reply to Ben Widawsky from comment #9)
> Created attachment 122828 [details]
> Error state from manhattan on gt4e

Ben, could you upgrade the dmc firmware to 1.26 and rerun? Thanks.
Comment 11 Mike Lothian 2016-04-15 17:55:31 UTC
It was very slow but I can confirm there aren't any issues for me any more on SKL - not sure if it was the firmware somewhere else in the stack


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.